2006/12/16
.updated support for ArchetypeSlot